// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`balanced win 1`] = `
Array [
  Object {
    "A": Map {
      "A" => 1,
    },
    "B": Map {
      "B" => 1,
    },
    "C": Map {
      "C" => 1,
    },
    "D": Map {
      "D" => 2,
    },
    "E": Map {
      "E" => 2,
    },
    "loser": "A",
    "validVoteCount": 7,
    "winner": undefined,
  },
  Object {
    "B": Map {
      "B" => 1,
      "A" => 0,
    },
    "C": Map {
      "C" => 1,
      "A" => 0,
    },
    "D": Map {
      "D" => 2,
      "A" => 1,
    },
    "E": Map {
      "E" => 2,
      "A" => 0,
    },
    "loser": "B",
    "validVoteCount": 7,
    "winner": undefined,
  },
  Object {
    "C": Map {
      "C" => 1,
      "A" => 0,
      "B" => 0,
    },
    "D": Map {
      "D" => 2,
      "A" => 1,
      "B" => 1,
    },
    "E": Map {
      "E" => 2,
      "A" => 0,
      "B" => 0,
    },
    "loser": "C",
    "validVoteCount": 7,
    "winner": "D",
  },
]
`;

exports[`early win 1`] = `
Array [
  Object {
    "A": Map {
      "A" => 1,
    },
    "B": Map {
      "B" => 0,
    },
    "C": Map {
      "C" => 1,
    },
    "D": Map {
      "D" => 4,
    },
    "E": Map {
      "E" => 1,
    },
    "loser": "C",
    "validVoteCount": 7,
    "winner": "D",
  },
]
`;
